--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,14 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'pub.devrel:easypermissions:0.3.0'
+    compile('com.google.api-client:google-api-client-android:1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-sheets:v4-rev483-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+
+
 }
